# intro-to-reflex-compose

./: README.md  notes.md
code/: .gitignore  default.nix  examples.cabal  examples.nix  shell.nix
code/css/: fizzbuzz.css  grid-dark.css  todo.css
code/exe/: Main.hs
code/src/: Examples.hs  Main.hs
code/src/Examples/: Behaviors.hs  Collection.hs  Components.hs  Dom.hs  Dynamics.hs  Events.hs  RecursiveDo.hs  Switch.hs  Todo.hs
code/src/Examples/Components/: Pass1.hs  Pass2.hs  Pass3.hs
code/src/Examples/Events/: FizzBuzz.hs
code/src/Util/: Runner.hs
talk/: default.nix  template.revealjs
talk/css/: tweak.css
talk/js/: rx-example.js
talk/slides/: behaviors.md  collections.md  components.md  conclusion.md  dom.md  dynamics.md  events.md  eventwriter.md  getting-started.md  higher-order.md  introduction.md  other.md  recursivedo.md  switching.md  title.md  todo.md
