name:                examples
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Examples
                     , Examples.Events
                     , Examples.Events.FizzBuzz
                     , Examples.Behaviors
                     , Examples.Dynamics
                     , Examples.RecursiveDo
                     , Examples.Dom
                     , Examples.Switch
                     , Examples.Collection
                     , Examples.Todo
                     , Colour
                     , Util.Attach
                     , Util.Grid
                     , Util.Grid.Config
                     , Util.Grid.Square
                     , Util.SVG
                     , Util.Reflex
                     , Util.Runner
  build-depends:       base >=4.9 && <4.10
                     , text >=1.2 && <1.3
                     , containers
                     , mtl
                     , data-default
                     , time
                     , lens
                     , ghcjs-dom
                     , reflex
                     , reflex-dom-core
                     , jsaddle
                     , jsaddle-warp
                     , filepath
                     , directory
                     , warp
                     , wai-middleware-static
                     , websockets
  hs-source-dirs:      src
  if impl(ghcjs -any)
    ghc-options:       -Wall -dedupe
    cpp-options:         -DGHCJS_BROWSER
  else 
    ghc-options:         -Wall
  default-language:    Haskell2010

executable examples-exe
  if !impl(ghcjs -any)
    buildable: False
  main-is:           Main.hs
  hs-source-dirs:    exe
  build-depends:       base >=4.9 && <4.10
                     , reflex-dom-core
                     , examples
  ghc-options:         -Wall -dedupe
  cpp-options:         -DGHCJS_BROWSER
  default-language:    Haskell2010
